--- a/test_setting.ini
+++ b/test_setting.ini
@@ -1,6 +1,6 @@
 timezone = 9
 
-voicechannel = 
+voicechannel = 698167112622932042
 textchannel = 697089590942498916
 ladderchannel = 
 jungsanchannel = 
