--- a/test_setting.ini
+++ b/test_setting.ini
@@ -1,7 +1,7 @@
 timezone = 9
 
-voicechannel = 698167112622932042
-textchannel = 697089590942498916
+voicechannel = 
+textchannel = 
 ladderchannel = 
 jungsanchannel = 
 killchannel = 
