--- a/test_setting.ini
+++ b/test_setting.ini
@@ -1,6 +1,6 @@
 timezone = 9
 
-voicechannel = 
+voicechannel = 699154784346963990
 textchannel = 698896113549443112
 ladderchannel = 
 jungsanchannel = 
