--- a/boss.ini
+++ b/boss.ini
@@ -1,175 +1,654 @@
------ 일반보스 -----
-bossname = 기감
-gentime = 01:00
-nogencheck = 0
-before_alert_ment = 입니다
-alert_ment = 입니다. 어여오세요
-
-bossname = 거드
-gentime = 03:00
-nogencheck = 1
-before_alert_ment = 입니다
-alert_ment = 입니다. 어여오세요
-
-bossname = 이프
-gentime = 02:00
-nogencheck = 1
-before_alert_ment = 입니다
-alert_ment = 입니다. 어여오세요
-
-bossname = 마요
-gentime = 03:00
-nogencheck = 1
-before_alert_ment = 입니다
-alert_ment = 입니다. 어여오세요
-
-bossname = 피닉
+-----일반보스-----
+bossname = 1트러스1
 gentime = 08:00
 nogencheck = 1
 before_alert_ment = 입니다
-alert_ment = 입니다. 어여오세요
+alert_ment = 탐이야 어여와
 
-bossname = 대흑
-gentime = 03:00
-nogencheck = 0
-before_alert_ment = 입니다
-alert_ment = 입니다. 어여오세요
-
-bossname = 서드
-gentime = 02:00
-nogencheck = 0
-before_alert_ment = 입니다
-alert_ment = 입니다. 어여오세요
-
-bossname = 북드
-gentime = 02:00
-nogencheck = 0
-before_alert_ment = 입니다
-alert_ment = 입니다. 어여오세요
-
-bossname = 중드
-gentime = 03:00
-nogencheck = 0
-before_alert_ment = 입니다
-alert_ment = 입니다. 어여오세요
-
-bossname = 동드
-gentime = 03:00
-nogencheck = 0
-before_alert_ment = 입니다
-alert_ment = 입니다. 어여오세요
-
-bossname = 아르
-gentime = 04:00
-nogencheck = 0
-before_alert_ment = 입니다
-alert_ment = 입니다. 어여오세요
-
-bossname = 자크
-gentime = 03:00
-nogencheck = 0
-before_alert_ment = 입니다
-alert_ment = 입니다. 어여오세요
-
-bossname = 카파
-gentime = 02:00
-nogencheck = 0
-before_alert_ment = 입니다
-alert_ment = 입니다. 어여오세요
-
-bossname = 웜
-gentime = 02:00
+bossname = 1트러스2
+gentime = 08:00
 nogencheck = 1
 before_alert_ment = 입니다
-alert_ment = 입니다. 어여오세요
+alert_ment = 탐이야 어여와
 
-bossname = 데스
-gentime = 09:00
+bossname = 1트러스3
+gentime = 08:00
 nogencheck = 1
 before_alert_ment = 입니다
-alert_ment = 입니다. 어여오세요
+alert_ment = 탐이야 어여와
 
-bossname = 커츠
+bossname = 1브라마노1
+gentime = 08:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 탐이야 어여와
+
+bossname = 1브라마노2
+gentime = 08:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 탐이야 어여와
+
+bossname = 1브라마노3
+gentime = 08:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 탐이야 어여와
+
+bossname = 1허큘리오1
 gentime = 10:00
 nogencheck = 1
 before_alert_ment = 입니다
-alert_ment = 입니다. 어여오세요
+alert_ment = 탐이야 어여와
 
-bossname = 녹샤
-gentime = 02:00
+bossname = 1허큘리오2
+gentime = 10:00
 nogencheck = 1
 before_alert_ment = 입니다
-alert_ment = 입니다. 어여오세요
+alert_ment = 탐이야 어여와
 
-bossname = 빨샤
-gentime = 02:00
+bossname = 1바돈1
+gentime = 10:00
 nogencheck = 1
 before_alert_ment = 입니다
-alert_ment = 입니다. 어여오세요
+alert_ment = 탐이야 어여와
 
-bossname = 산두
-gentime = 03:00
-nogencheck = 0
-before_alert_ment = 입니다
-alert_ment = 입니다. 어여오세요
-
-bossname = 에자
-gentime = 05:00
+bossname = 1바돈2
+gentime = 10:00
 nogencheck = 1
 before_alert_ment = 입니다
-alert_ment = 입니다. 어여오세요
+alert_ment = 탐이야 어여와
 
-bossname = 스피
-gentime = 03:00
-nogencheck = 0
-before_alert_ment = 입니다
-alert_ment = 입니다. 어여오세요
-
-bossname = 개미
-gentime = 03:30
+bossname = 1카이오1
+gentime = 12:00
 nogencheck = 1
 before_alert_ment = 입니다
-alert_ment = 입니다. 어여오세요
+alert_ment = 탐이야 어여와
 
-bossname = 도펠
-gentime = 04:00
+bossname = 1카이오2
+gentime = 12:00
 nogencheck = 1
 before_alert_ment = 입니다
-alert_ment = 입니다. 어여오세요
+alert_ment = 탐이야 어여와
 
-bossname = 감데
-gentime = 06:00
-nogencheck = 0
-before_alert_ment = 입니다
-alert_ment = 입니다. 어여오세요
-
-bossname = 대장로
-gentime = 03:00
+bossname = 1엘로디1
+gentime = 12:00
 nogencheck = 1
 before_alert_ment = 입니다
-alert_ment = 입니다. 어여오세요
+alert_ment = 탐이야 어여와
 
-bossname = 베리스
-gentime = 03:00
+bossname = 1엘로디2
+gentime = 12:00
 nogencheck = 1
 before_alert_ment = 입니다
-alert_ment = 입니다. 어여오세요
+alert_ment = 탐이야 어여와
 
-bossname = 케레
-gentime = 03:00
+bossname = 1엘로디3
+gentime = 12:00
 nogencheck = 1
 before_alert_ment = 입니다
-alert_ment = 입니다. 어여오세요
+alert_ment = 탐이야 어여와
 
-bossname = 가스트
-gentime = 03:00
-nogencheck = 1
-before_alert_ment = 입니다
-alert_ment = 입니다. 어여오세요
-
-bossname = 리칸트
+bossname = 1지로드1
 gentime = 08:00
 nogencheck = 1
 before_alert_ment = 입니다
-alert_ment = 입니다. 어여오세요
+alert_ment = 탐이야 어여와
 
+bossname = 1지로드2
+gentime = 08:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 탐이야 어여와
+
+bossname = 1라이노1
+gentime = 08:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 탐이야 어여와
+
+bossname = 1라이노2
+gentime = 08:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 탐이야 어여와
+
+bossname = 1유주라1
+gentime = 12:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 탐이야 어여와
+
+bossname = 1유주라2
+gentime = 12:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 탐이야 어여와
+
+bossname = 1커리허1
+gentime = 8:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 탐이야 어여와
+
+bossname = 1커리허2
+gentime = 8:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 탐이야 어여와
+
+bossname = 2트러스1
+gentime = 08:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 탐이야 어여와
+
+bossname = 2트러스2
+gentime = 08:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 탐이야 어여와
+
+bossname = 2트러스3
+gentime = 08:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 탐이야 어여와
+
+bossname = 2브라마노1
+gentime = 08:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 탐이야 어여와
+
+bossname = 2브라마노2
+gentime = 08:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 탐이야 어여와
+
+bossname = 2브라마노3
+gentime = 08:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 탐이야 어여와
+
+bossname = 2허큘리오1
+gentime = 10:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 탐이야 어여와
+
+bossname = 2허큘리오2
+gentime = 10:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 탐이야 어여와
+
+bossname = 2바돈1
+gentime = 10:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 탐이야 어여와
+
+bossname = 2바돈2
+gentime = 10:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 탐이야 어여와
+
+bossname = 2카이오1
+gentime = 12:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 탐이야 어여와
+
+bossname = 2카이오2
+gentime = 12:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 탐이야 어여와
+
+bossname = 2엘로디1
+gentime = 12:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 탐이야 어여와
+
+bossname = 2엘로디2
+gentime = 12:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 탐이야 어여와
+
+bossname = 2엘로디3
+gentime = 12:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 탐이야 어여와
+
+bossname = 2지로드1
+gentime = 08:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 탐이야 어여와
+
+bossname = 2지로드2
+gentime = 08:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 탐이야 어여와
+
+bossname = 2라이노1
+gentime = 08:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 탐이야 어여와
+
+bossname = 2라이노2
+gentime = 08:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 탐이야 어여와
+
+bossname = 2유주라1
+gentime = 12:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 탐이야 어여와
+
+bossname = 2유주라2
+gentime = 12:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 탐이야 어여와
+
+bossname = 2커리허1
+gentime = 8:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 탐이야 어여와
+
+bossname = 2커리허2
+gentime = 8:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 탐이야 어여와
+
+bossname = 3트러스1
+gentime = 08:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 탐이야 어여와
+
+bossname = 3트러스2
+gentime = 08:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 탐이야 어여와
+
+bossname = 3트러스3
+gentime = 08:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 탐이야 어여와
+
+bossname = 3브라마노1
+gentime = 08:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 탐이야 어여와
+
+bossname = 3브라마노2
+gentime = 08:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 탐이야 어여와
+
+bossname = 3브라마노3
+gentime = 08:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 탐이야 어여와
+
+bossname = 3허큘리오1
+gentime = 10:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 탐이야 어여와
+
+bossname = 3허큘리오2
+gentime = 10:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 탐이야 어여와
+
+bossname = 3바돈1
+gentime = 10:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 탐이야 어여와
+
+bossname = 3바돈2
+gentime = 10:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 탐이야 어여와
+
+bossname = 3카이오1
+gentime = 12:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 탐이야 어여와
+
+bossname = 3카이오2
+gentime = 12:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 탐이야 어여와
+
+bossname = 3엘로디1
+gentime = 12:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 탐이야 어여와
+
+bossname = 3엘로디2
+gentime = 12:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 탐이야 어여와
+
+bossname = 3엘로디3
+gentime = 12:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 탐이야 어여와
+
+bossname = 3지로드1
+gentime = 08:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 탐이야 어여와
+
+bossname = 3지로드2
+gentime = 08:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 탐이야 어여와
+
+bossname = 3라이노1
+gentime = 08:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 탐이야 어여와
+
+bossname = 3라이노2
+gentime = 08:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 탐이야 어여와
+
+bossname = 3유주라1
+gentime = 12:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 탐이야 어여와
+
+bossname = 3유주라2
+gentime = 12:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 탐이야 어여와
+
+bossname = 3커리허1
+gentime = 8:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 탐이야 어여와
+
+bossname = 3커리허2
+gentime = 8:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 탐이야 어여와
+
+bossname = 3유주라1
+gentime = 12:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 탐이야 어여와
+
+bossname = 3유주라2
+gentime = 12:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 탐이야 어여와
+
+bossname = 3커리허1
+gentime = 8:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 탐이야 어여와
+
+bossname = 3커리허2
+gentime = 8:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 탐이야 어여와
+
+bossname = 1차크만1
+gentime = 12:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 탐이야 어여와
+
+bossname = 1차크만2
+gentime = 12:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 탐이야 어여와
+
+bossname = 1아르타1
+gentime = 12:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 탐이야 어여와
+
+bossname = 1아르타2 
+gentime = 12:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 탐이야 어여와
+
+bossname = 1아르타3 
+gentime = 12:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 탐이야 어여와
+
+bossname = 2차크만1
+gentime = 12:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 탐이야 어여와
+
+bossname = 2차크만2
+gentime = 12:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 탐이야 어여와
+
+bossname = 2아르타1
+gentime = 12:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 탐이야 어여와
+
+bossname = 2아르타2 
+gentime = 12:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 탐이야 어여와
+
+bossname = 2아르타3 
+gentime = 12:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 탐이야 어여와
+
+bossname = 3차크만1
+gentime = 12:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 탐이야 어여와
+
+bossname = 3차크만2
+gentime = 12:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 탐이야 어여와
+
+bossname = 3아르타1
+gentime = 12:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 탐이야 어여와
+
+bossname = 3아르타2 
+gentime = 12:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 탐이야 어여와
+
+bossname = 3아르타3 
+gentime = 12:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 탐이야 어여와
+
+bossname = 1델파나
+gentime = 12:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 탐이야 어여와
+
+bossname = 2델파나
+gentime = 12:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 탐이야 어여와
+
+bossname = 3델파나
+gentime = 12:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 탐이야 어여와
+
+bossname = 1세르마
+gentime = 08:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 탐이야 어여와
+
+bossname = 2세르마
+gentime = 08:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 탐이야 어여와
+
+bossname = 3세르마
+gentime = 08:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 탐이야 어여와
+
+bossname = 1라카탄
+gentime = 07:50
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 탐이야 어여와
+
+bossname = 2라카탄
+gentime = 07:50
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 탐이야 어여와
+
+bossname = 3라카탄
+gentime = 07:50
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 탐이야 어여와
+
+bossname = 1마프르만
+gentime = 07:50
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 탐이야 어여와
+
+bossname = 2마프르만
+gentime = 07:50
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 탐이야 어여와
+
+bossname = 3마프르만
+gentime = 07:50
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 탐이야 어여와
+
+bossname = 1페리라
+gentime = 08:10
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 탐이야 어여와
+
+bossname = 2페리라
+gentime = 08:10
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 탐이야 어여와
+
+bossname = 3페리라
+gentime = 08:10
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 탐이야 어여와
+
+bossname = 1도그록
+gentime = 08:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 탐이야 어여와
+
+bossname = 2도그록
+gentime = 08:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 탐이야 어여와
+
+bossname = 3도그록
+gentime = 08:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 탐이야 어여와
+
+bossname = 결전두크라스
+gentime = 08:10
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 탐이야 어여와
+
+bossname = 혈투벨프스
+gentime = 08:10
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 탐이야 어여와
+
+bossname = 격돌케만
+gentime = 08:10
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 탐이야 어여와
