--- a/boss.ini
+++ b/boss.ini
@@ -1,4 +1,76 @@
 -----일반보스-----
+bossname = 1트로이카
+gentime = 03:50
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 탐이야 어여와
+
+bossname = 2트로이카
+gentime = 03:50
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 탐이야 어여와
+
+bossname = 3트로이카
+gentime = 03:50
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 탐이야 어여와
+
+bossname = 1벨프스
+gentime = 04:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 탐이야 어여와
+
+bossname = 2벨프스
+gentime = 04:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 탐이야 어여와
+
+bossname = 3벨프스
+gentime = 04:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 탐이야 어여와
+
+bossname = 1베네딕트
+gentime = 04:10
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 탐이야 어여와
+
+bossname = 2베네딕트
+gentime = 04:10
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 탐이야 어여와
+
+bossname = 3베네딕트
+gentime = 04:10
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 탐이야 어여와
+
+bossname = 1이프리나
+gentime = 04:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 탐이야 어여와
+
+bossname = 2이프리나
+gentime = 04:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 탐이야 어여와
+
+bossname = 3이프리나
+gentime = 04:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 탐이야 어여와
+
 bossname = 1트러스1
 gentime = 08:00
 nogencheck = 1
