--- a/boss.ini
+++ b/boss.ini
@@ -17,6 +17,18 @@ nogencheck = 1
 before_alert_ment = 입니다
 alert_ment = 탐이야 어여와
 
+bossname = 4트로이카
+gentime = 03:50
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 탐이야 어여와
+
+bossname = 5트로이카
+gentime = 03:50
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 탐이야 어여와
+
 bossname = 1벨프스
 gentime = 04:00
 nogencheck = 1
@@ -30,6 +42,18 @@ before_alert_ment = 입니다
 alert_ment = 탐이야 어여와
 
 bossname = 3벨프스
+gentime = 04:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 탐이야 어여와
+
+bossname = 4벨프스
+gentime = 04:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 탐이야 어여와
+
+bossname = 5벨프스
 gentime = 04:00
 nogencheck = 1
 before_alert_ment = 입니다
@@ -53,6 +77,18 @@ nogencheck = 1
 before_alert_ment = 입니다
 alert_ment = 탐이야 어여와
 
+bossname = 4베네딕트
+gentime = 04:10
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 탐이야 어여와
+
+bossname = 5베네딕트
+gentime = 04:10
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 탐이야 어여와
+
 bossname = 1이프리나
 gentime = 04:00
 nogencheck = 1
@@ -66,6 +102,18 @@ before_alert_ment = 입니다
 alert_ment = 탐이야 어여와
 
 bossname = 3이프리나
+gentime = 04:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 탐이야 어여와
+
+bossname = 4이프리나
+gentime = 04:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 탐이야 어여와
+
+bossname = 5이프리나
 gentime = 04:00
 nogencheck = 1
 before_alert_ment = 입니다
@@ -485,14 +533,278 @@ nogencheck = 1
 before_alert_ment = 입니다
 alert_ment = 탐이야 어여와
 
-bossname = 3유주라1
+bossname = 4트러스1
+gentime = 08:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 탐이야 어여와
+
+bossname = 4트러스2
+gentime = 08:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 탐이야 어여와
+
+bossname = 4트러스3
+gentime = 08:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 탐이야 어여와
+
+bossname = 4브라마노1
+gentime = 08:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 탐이야 어여와
+
+bossname = 4브라마노2
+gentime = 08:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 탐이야 어여와
+
+bossname = 4브라마노3
+gentime = 08:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 탐이야 어여와
+
+bossname = 4허큘리오1
+gentime = 10:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 탐이야 어여와
+
+bossname = 4허큘리오2
+gentime = 10:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 탐이야 어여와
+
+bossname = 4바돈1
+gentime = 10:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 탐이야 어여와
+
+bossname = 4바돈2
+gentime = 10:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 탐이야 어여와
+
+bossname = 4카이오1
 gentime = 12:00
 nogencheck = 1
 before_alert_ment = 입니다
 alert_ment = 탐이야 어여와
 
-bossname = 3유주라2
+bossname = 4카이오2
 gentime = 12:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 탐이야 어여와
+
+bossname = 4엘로디1
+gentime = 12:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 탐이야 어여와
+
+bossname = 4엘로디2
+gentime = 12:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 탐이야 어여와
+
+bossname = 4엘로디3
+gentime = 12:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 탐이야 어여와
+
+bossname = 4지로드1
+gentime = 08:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 탐이야 어여와
+
+bossname = 4지로드2
+gentime = 08:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 탐이야 어여와
+
+bossname = 4라이노1
+gentime = 10:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 탐이야 어여와
+
+bossname = 4라이노2
+gentime = 10:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 탐이야 어여와
+
+bossname = 4유주라1
+gentime = 12:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 탐이야 어여와
+
+bossname = 4유주라2
+gentime = 12:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 탐이야 어여와
+
+bossname = 4커리허1
+gentime = 08:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 탐이야 어여와
+
+bossname = 4커리허2
+gentime = 08:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 탐이야 어여와
+
+bossname = 5트러스1
+gentime = 08:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 탐이야 어여와
+
+bossname = 5트러스2
+gentime = 08:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 탐이야 어여와
+
+bossname = 5트러스3
+gentime = 08:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 탐이야 어여와
+
+bossname = 5브라마노1
+gentime = 08:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 탐이야 어여와
+
+bossname = 5브라마노2
+gentime = 08:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 탐이야 어여와
+
+bossname = 5브라마노3
+gentime = 08:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 탐이야 어여와
+
+bossname = 5허큘리오1
+gentime = 10:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 탐이야 어여와
+
+bossname = 5허큘리오2
+gentime = 10:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 탐이야 어여와
+
+bossname = 5바돈1
+gentime = 10:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 탐이야 어여와
+
+bossname = 5바돈2
+gentime = 10:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 탐이야 어여와
+
+bossname = 5카이오1
+gentime = 12:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 탐이야 어여와
+
+bossname = 5카이오2
+gentime = 12:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 탐이야 어여와
+
+bossname = 5엘로디1
+gentime = 12:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 탐이야 어여와
+
+bossname = 5엘로디2
+gentime = 12:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 탐이야 어여와
+
+bossname = 5엘로디3
+gentime = 12:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 탐이야 어여와
+
+bossname = 5지로드1
+gentime = 08:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 탐이야 어여와
+
+bossname = 5지로드2
+gentime = 08:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 탐이야 어여와
+
+bossname = 5라이노1
+gentime = 10:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 탐이야 어여와
+
+bossname = 5라이노2
+gentime = 10:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 탐이야 어여와
+
+bossname = 5유주라1
+gentime = 12:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 탐이야 어여와
+
+bossname = 5유주라2
+gentime = 12:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 탐이야 어여와
+
+bossname = 5커리허1
+gentime = 08:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 탐이야 어여와
+
+bossname = 5커리허2
+gentime = 08:00
 nogencheck = 1
 before_alert_ment = 입니다
 alert_ment = 탐이야 어여와
@@ -587,6 +899,66 @@ nogencheck = 1
 before_alert_ment = 입니다
 alert_ment = 탐이야 어여와
 
+bossname = 4차크만1
+gentime = 10:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 탐이야 어여와
+
+bossname = 4차크만2
+gentime = 10:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 탐이야 어여와
+
+bossname = 4아르타1
+gentime = 12:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 탐이야 어여와
+
+bossname = 4아르타2 
+gentime = 12:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 탐이야 어여와
+
+bossname = 4아르타3 
+gentime = 12:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 탐이야 어여와
+
+bossname = 5차크만1
+gentime = 10:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 탐이야 어여와
+
+bossname = 5차크만2
+gentime = 10:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 탐이야 어여와
+
+bossname = 5아르타1
+gentime = 12:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 탐이야 어여와
+
+bossname = 5아르타2 
+gentime = 12:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 탐이야 어여와
+
+bossname = 5아르타3 
+gentime = 12:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 탐이야 어여와
+
 bossname = 1델파나
 gentime = 12:00
 nogencheck = 1
@@ -600,6 +972,18 @@ before_alert_ment = 입니다
 alert_ment = 탐이야 어여와
 
 bossname = 3델파나
+gentime = 12:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 탐이야 어여와
+
+bossname = 4델파나
+gentime = 12:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 탐이야 어여와
+
+bossname = 5델파나
 gentime = 12:00
 nogencheck = 1
 before_alert_ment = 입니다
@@ -623,6 +1007,18 @@ nogencheck = 1
 before_alert_ment = 입니다
 alert_ment = 탐이야 어여와
 
+bossname = 4세르마
+gentime = 08:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 탐이야 어여와
+
+bossname = 5세르마
+gentime = 08:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 탐이야 어여와
+
 bossname = 1라카탄
 gentime = 07:50
 nogencheck = 1
@@ -636,6 +1032,18 @@ before_alert_ment = 입니다
 alert_ment = 탐이야 어여와
 
 bossname = 3라카탄
+gentime = 07:50
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 탐이야 어여와
+
+bossname = 4라카탄
+gentime = 07:50
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 탐이야 어여와
+
+bossname = 5라카탄
 gentime = 07:50
 nogencheck = 1
 before_alert_ment = 입니다
@@ -659,6 +1067,18 @@ nogencheck = 1
 before_alert_ment = 입니다
 alert_ment = 탐이야 어여와
 
+bossname = 4마프르만
+gentime = 07:50
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 탐이야 어여와
+
+bossname = 5마프르만
+gentime = 07:50
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 탐이야 어여와
+
 bossname = 1페리라
 gentime = 08:10
 nogencheck = 1
@@ -677,6 +1097,18 @@ nogencheck = 1
 before_alert_ment = 입니다
 alert_ment = 탐이야 어여와
 
+bossname = 4페리라
+gentime = 08:10
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 탐이야 어여와
+
+bossname = 5페리라
+gentime = 08:10
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 탐이야 어여와
+
 bossname = 1도그록
 gentime = 08:00
 nogencheck = 1
@@ -690,6 +1122,18 @@ before_alert_ment = 입니다
 alert_ment = 탐이야 어여와
 
 bossname = 3도그록
+gentime = 08:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 탐이야 어여와
+
+bossname = 4도그록
+gentime = 08:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 탐이야 어여와
+
+bossname = 5도그록
 gentime = 08:00
 nogencheck = 1
 before_alert_ment = 입니다
