--- a/boss.ini
+++ b/boss.ini
@@ -1,4 +1,5 @@
 -----일반보스-----
+-----일반보스-----
 bossname = 1트로이카
 gentime = 03:50
 nogencheck = 1
@@ -11,19 +12,7 @@ nogencheck = 1
 before_alert_ment = 입니다
 alert_ment = 탐이야 어여와
 
-bossname = 3트로이카
-gentime = 03:50
-nogencheck = 1
-before_alert_ment = 입니다
-alert_ment = 탐이야 어여와
-
 bossname = 4트로이카
-gentime = 03:50
-nogencheck = 1
-before_alert_ment = 입니다
-alert_ment = 탐이야 어여와
-
-bossname = 5트로이카
 gentime = 03:50
 nogencheck = 1
 before_alert_ment = 입니다
@@ -41,19 +30,7 @@ nogencheck = 1
 before_alert_ment = 입니다
 alert_ment = 탐이야 어여와
 
-bossname = 3벨프스
-gentime = 04:00
-nogencheck = 1
-before_alert_ment = 입니다
-alert_ment = 탐이야 어여와
-
 bossname = 4벨프스
-gentime = 04:00
-nogencheck = 1
-before_alert_ment = 입니다
-alert_ment = 탐이야 어여와
-
-bossname = 5벨프스
 gentime = 04:00
 nogencheck = 1
 before_alert_ment = 입니다
@@ -71,19 +48,7 @@ nogencheck = 1
 before_alert_ment = 입니다
 alert_ment = 탐이야 어여와
 
-bossname = 3베네딕트
-gentime = 04:10
-nogencheck = 1
-before_alert_ment = 입니다
-alert_ment = 탐이야 어여와
-
 bossname = 4베네딕트
-gentime = 04:10
-nogencheck = 1
-before_alert_ment = 입니다
-alert_ment = 탐이야 어여와
-
-bossname = 5베네딕트
 gentime = 04:10
 nogencheck = 1
 before_alert_ment = 입니다
@@ -101,19 +66,7 @@ nogencheck = 1
 before_alert_ment = 입니다
 alert_ment = 탐이야 어여와
 
-bossname = 3이프리나
-gentime = 04:00
-nogencheck = 1
-before_alert_ment = 입니다
-alert_ment = 탐이야 어여와
-
 bossname = 4이프리나
-gentime = 04:00
-nogencheck = 1
-before_alert_ment = 입니다
-alert_ment = 탐이야 어여와
-
-bossname = 5이프리나
 gentime = 04:00
 nogencheck = 1
 before_alert_ment = 입니다
@@ -395,144 +348,6 @@ nogencheck = 1
 before_alert_ment = 입니다
 alert_ment = 탐이야 어여와
 
-bossname = 3트러스1
-gentime = 08:00
-nogencheck = 1
-before_alert_ment = 입니다
-alert_ment = 탐이야 어여와
-
-bossname = 3트러스2
-gentime = 08:00
-nogencheck = 1
-before_alert_ment = 입니다
-alert_ment = 탐이야 어여와
-
-bossname = 3트러스3
-gentime = 08:00
-nogencheck = 1
-before_alert_ment = 입니다
-alert_ment = 탐이야 어여와
-
-bossname = 3브라마노1
-gentime = 08:00
-nogencheck = 1
-before_alert_ment = 입니다
-alert_ment = 탐이야 어여와
-
-bossname = 3브라마노2
-gentime = 08:00
-nogencheck = 1
-before_alert_ment = 입니다
-alert_ment = 탐이야 어여와
-
-bossname = 3브라마노3
-gentime = 08:00
-nogencheck = 1
-before_alert_ment = 입니다
-alert_ment = 탐이야 어여와
-
-bossname = 3허큘리오1
-gentime = 10:00
-nogencheck = 1
-before_alert_ment = 입니다
-alert_ment = 탐이야 어여와
-
-bossname = 3허큘리오2
-gentime = 10:00
-nogencheck = 1
-before_alert_ment = 입니다
-alert_ment = 탐이야 어여와
-
-bossname = 3바돈1
-gentime = 10:00
-nogencheck = 1
-before_alert_ment = 입니다
-alert_ment = 탐이야 어여와
-
-bossname = 3바돈2
-gentime = 10:00
-nogencheck = 1
-before_alert_ment = 입니다
-alert_ment = 탐이야 어여와
-
-bossname = 3카이오1
-gentime = 12:00
-nogencheck = 1
-before_alert_ment = 입니다
-alert_ment = 탐이야 어여와
-
-bossname = 3카이오2
-gentime = 12:00
-nogencheck = 1
-before_alert_ment = 입니다
-alert_ment = 탐이야 어여와
-
-bossname = 3엘로디1
-gentime = 12:00
-nogencheck = 1
-before_alert_ment = 입니다
-alert_ment = 탐이야 어여와
-
-bossname = 3엘로디2
-gentime = 12:00
-nogencheck = 1
-before_alert_ment = 입니다
-alert_ment = 탐이야 어여와
-
-bossname = 3엘로디3
-gentime = 12:00
-nogencheck = 1
-before_alert_ment = 입니다
-alert_ment = 탐이야 어여와
-
-bossname = 3지로드1
-gentime = 08:00
-nogencheck = 1
-before_alert_ment = 입니다
-alert_ment = 탐이야 어여와
-
-bossname = 3지로드2
-gentime = 08:00
-nogencheck = 1
-before_alert_ment = 입니다
-alert_ment = 탐이야 어여와
-
-bossname = 3라이노1
-gentime = 08:00
-nogencheck = 1
-before_alert_ment = 입니다
-alert_ment = 탐이야 어여와
-
-bossname = 3라이노2
-gentime = 08:00
-nogencheck = 1
-before_alert_ment = 입니다
-alert_ment = 탐이야 어여와
-
-bossname = 3유주라1
-gentime = 12:00
-nogencheck = 1
-before_alert_ment = 입니다
-alert_ment = 탐이야 어여와
-
-bossname = 3유주라2
-gentime = 12:00
-nogencheck = 1
-before_alert_ment = 입니다
-alert_ment = 탐이야 어여와
-
-bossname = 3커리허1
-gentime = 08:00
-nogencheck = 1
-before_alert_ment = 입니다
-alert_ment = 탐이야 어여와
-
-bossname = 3커리허2
-gentime = 08:00
-nogencheck = 1
-before_alert_ment = 입니다
-alert_ment = 탐이야 어여와
-
 bossname = 4트러스1
 gentime = 08:00
 nogencheck = 1
@@ -671,144 +486,6 @@ nogencheck = 1
 before_alert_ment = 입니다
 alert_ment = 탐이야 어여와
 
-bossname = 5트러스1
-gentime = 08:00
-nogencheck = 1
-before_alert_ment = 입니다
-alert_ment = 탐이야 어여와
-
-bossname = 5트러스2
-gentime = 08:00
-nogencheck = 1
-before_alert_ment = 입니다
-alert_ment = 탐이야 어여와
-
-bossname = 5트러스3
-gentime = 08:00
-nogencheck = 1
-before_alert_ment = 입니다
-alert_ment = 탐이야 어여와
-
-bossname = 5브라마노1
-gentime = 08:00
-nogencheck = 1
-before_alert_ment = 입니다
-alert_ment = 탐이야 어여와
-
-bossname = 5브라마노2
-gentime = 08:00
-nogencheck = 1
-before_alert_ment = 입니다
-alert_ment = 탐이야 어여와
-
-bossname = 5브라마노3
-gentime = 08:00
-nogencheck = 1
-before_alert_ment = 입니다
-alert_ment = 탐이야 어여와
-
-bossname = 5허큘리오1
-gentime = 10:00
-nogencheck = 1
-before_alert_ment = 입니다
-alert_ment = 탐이야 어여와
-
-bossname = 5허큘리오2
-gentime = 10:00
-nogencheck = 1
-before_alert_ment = 입니다
-alert_ment = 탐이야 어여와
-
-bossname = 5바돈1
-gentime = 10:00
-nogencheck = 1
-before_alert_ment = 입니다
-alert_ment = 탐이야 어여와
-
-bossname = 5바돈2
-gentime = 10:00
-nogencheck = 1
-before_alert_ment = 입니다
-alert_ment = 탐이야 어여와
-
-bossname = 5카이오1
-gentime = 12:00
-nogencheck = 1
-before_alert_ment = 입니다
-alert_ment = 탐이야 어여와
-
-bossname = 5카이오2
-gentime = 12:00
-nogencheck = 1
-before_alert_ment = 입니다
-alert_ment = 탐이야 어여와
-
-bossname = 5엘로디1
-gentime = 12:00
-nogencheck = 1
-before_alert_ment = 입니다
-alert_ment = 탐이야 어여와
-
-bossname = 5엘로디2
-gentime = 12:00
-nogencheck = 1
-before_alert_ment = 입니다
-alert_ment = 탐이야 어여와
-
-bossname = 5엘로디3
-gentime = 12:00
-nogencheck = 1
-before_alert_ment = 입니다
-alert_ment = 탐이야 어여와
-
-bossname = 5지로드1
-gentime = 08:00
-nogencheck = 1
-before_alert_ment = 입니다
-alert_ment = 탐이야 어여와
-
-bossname = 5지로드2
-gentime = 08:00
-nogencheck = 1
-before_alert_ment = 입니다
-alert_ment = 탐이야 어여와
-
-bossname = 5라이노1
-gentime = 10:00
-nogencheck = 1
-before_alert_ment = 입니다
-alert_ment = 탐이야 어여와
-
-bossname = 5라이노2
-gentime = 10:00
-nogencheck = 1
-before_alert_ment = 입니다
-alert_ment = 탐이야 어여와
-
-bossname = 5유주라1
-gentime = 12:00
-nogencheck = 1
-before_alert_ment = 입니다
-alert_ment = 탐이야 어여와
-
-bossname = 5유주라2
-gentime = 12:00
-nogencheck = 1
-before_alert_ment = 입니다
-alert_ment = 탐이야 어여와
-
-bossname = 5커리허1
-gentime = 08:00
-nogencheck = 1
-before_alert_ment = 입니다
-alert_ment = 탐이야 어여와
-
-bossname = 5커리허2
-gentime = 08:00
-nogencheck = 1
-before_alert_ment = 입니다
-alert_ment = 탐이야 어여와
-
 bossname = 1차크만1
 gentime = 10:00
 nogencheck = 1
@@ -869,36 +546,6 @@ nogencheck = 1
 before_alert_ment = 입니다
 alert_ment = 탐이야 어여와
 
-bossname = 3차크만1
-gentime = 12:00
-nogencheck = 1
-before_alert_ment = 입니다
-alert_ment = 탐이야 어여와
-
-bossname = 3차크만2
-gentime = 12:00
-nogencheck = 1
-before_alert_ment = 입니다
-alert_ment = 탐이야 어여와
-
-bossname = 3아르타1
-gentime = 12:00
-nogencheck = 1
-before_alert_ment = 입니다
-alert_ment = 탐이야 어여와
-
-bossname = 3아르타2 
-gentime = 12:00
-nogencheck = 1
-before_alert_ment = 입니다
-alert_ment = 탐이야 어여와
-
-bossname = 3아르타3 
-gentime = 12:00
-nogencheck = 1
-before_alert_ment = 입니다
-alert_ment = 탐이야 어여와
-
 bossname = 4차크만1
 gentime = 10:00
 nogencheck = 1
@@ -929,36 +576,6 @@ nogencheck = 1
 before_alert_ment = 입니다
 alert_ment = 탐이야 어여와
 
-bossname = 5차크만1
-gentime = 10:00
-nogencheck = 1
-before_alert_ment = 입니다
-alert_ment = 탐이야 어여와
-
-bossname = 5차크만2
-gentime = 10:00
-nogencheck = 1
-before_alert_ment = 입니다
-alert_ment = 탐이야 어여와
-
-bossname = 5아르타1
-gentime = 12:00
-nogencheck = 1
-before_alert_ment = 입니다
-alert_ment = 탐이야 어여와
-
-bossname = 5아르타2 
-gentime = 12:00
-nogencheck = 1
-before_alert_ment = 입니다
-alert_ment = 탐이야 어여와
-
-bossname = 5아르타3 
-gentime = 12:00
-nogencheck = 1
-before_alert_ment = 입니다
-alert_ment = 탐이야 어여와
-
 bossname = 1델파나
 gentime = 12:00
 nogencheck = 1
@@ -971,19 +588,7 @@ nogencheck = 1
 before_alert_ment = 입니다
 alert_ment = 탐이야 어여와
 
-bossname = 3델파나
-gentime = 12:00
-nogencheck = 1
-before_alert_ment = 입니다
-alert_ment = 탐이야 어여와
-
 bossname = 4델파나
-gentime = 12:00
-nogencheck = 1
-before_alert_ment = 입니다
-alert_ment = 탐이야 어여와
-
-bossname = 5델파나
 gentime = 12:00
 nogencheck = 1
 before_alert_ment = 입니다
@@ -1001,19 +606,7 @@ nogencheck = 1
 before_alert_ment = 입니다
 alert_ment = 탐이야 어여와
 
-bossname = 3세르마
-gentime = 08:00
-nogencheck = 1
-before_alert_ment = 입니다
-alert_ment = 탐이야 어여와
-
 bossname = 4세르마
-gentime = 08:00
-nogencheck = 1
-before_alert_ment = 입니다
-alert_ment = 탐이야 어여와
-
-bossname = 5세르마
 gentime = 08:00
 nogencheck = 1
 before_alert_ment = 입니다
@@ -1031,19 +624,7 @@ nogencheck = 1
 before_alert_ment = 입니다
 alert_ment = 탐이야 어여와
 
-bossname = 3라카탄
-gentime = 07:50
-nogencheck = 1
-before_alert_ment = 입니다
-alert_ment = 탐이야 어여와
-
 bossname = 4라카탄
-gentime = 07:50
-nogencheck = 1
-before_alert_ment = 입니다
-alert_ment = 탐이야 어여와
-
-bossname = 5라카탄
 gentime = 07:50
 nogencheck = 1
 before_alert_ment = 입니다
@@ -1061,19 +642,7 @@ nogencheck = 1
 before_alert_ment = 입니다
 alert_ment = 탐이야 어여와
 
-bossname = 3마프르만
-gentime = 07:50
-nogencheck = 1
-before_alert_ment = 입니다
-alert_ment = 탐이야 어여와
-
 bossname = 4마프르만
-gentime = 07:50
-nogencheck = 1
-before_alert_ment = 입니다
-alert_ment = 탐이야 어여와
-
-bossname = 5마프르만
 gentime = 07:50
 nogencheck = 1
 before_alert_ment = 입니다
@@ -1091,19 +660,7 @@ nogencheck = 1
 before_alert_ment = 입니다
 alert_ment = 탐이야 어여와
 
-bossname = 3페리라
-gentime = 08:10
-nogencheck = 1
-before_alert_ment = 입니다
-alert_ment = 탐이야 어여와
-
 bossname = 4페리라
-gentime = 08:10
-nogencheck = 1
-before_alert_ment = 입니다
-alert_ment = 탐이야 어여와
-
-bossname = 5페리라
 gentime = 08:10
 nogencheck = 1
 before_alert_ment = 입니다
@@ -1121,19 +678,7 @@ nogencheck = 1
 before_alert_ment = 입니다
 alert_ment = 탐이야 어여와
 
-bossname = 3도그록
-gentime = 08:00
-nogencheck = 1
-before_alert_ment = 입니다
-alert_ment = 탐이야 어여와
-
 bossname = 4도그록
-gentime = 08:00
-nogencheck = 1
-before_alert_ment = 입니다
-alert_ment = 탐이야 어여와
-
-bossname = 5도그록
 gentime = 08:00
 nogencheck = 1
 before_alert_ment = 입니다
